# interceptor_drone

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.yml  documentation.yml  (+2 more)
docs/: camera_pipeline.md  perception_yolo_pipeline.md  project_context.md  px4_params.md  tutorial_offboard.md  version_matrix.md
missions/: README.md
repos/: dev.repos
requirements/: perception.txt
ros2_ws/src/interceptor_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/interceptor_control/config/: mission_params.yaml
ros2_ws/src/interceptor_control/interceptor_control/: offboard_hover.py
ros2_ws/src/interceptor_control/interceptor_control/missions/mission1_hover/: hover_land.py
ros2_ws/src/interceptor_control/interceptor_control/missions/mission1_hover/rosbag/rosbag2_2026_04_24-09_31_32/: metadata.yaml
ros2_ws/src/interceptor_control/interceptor_control/missions/mission1_hover/rosbag/wind_12ms/: metadata.yaml
ros2_ws/src/interceptor_control/interceptor_control/missions/mission1_hover/rosbag/wind_5ms/: metadata.yaml
ros2_ws/src/interceptor_control/interceptor_control/missions/mission2_nav/: point_nav.py
ros2_ws/src/interceptor_control/interceptor_control/perception/: image_probe.py
ros2_ws/src/interceptor_control/launch/: camera_bridge.launch.py  hover.launch.py
scripts/: setup_dev_env.sh  setup_perception.sh  verify_env.sh
tools/: augment_motion_blur.py  check_target_topics.sh  record_balloon_dataset.py  record_negative_dataset.py  run_yolo_live.sh  yolo_live_detect.py
(+24 files in other folders)
