<?xml version="1.0"?>
<package format="3">
  <name>interceptor_control</name>
  <version>0.1.0</version>
  <description>요격 드론 Offboard 제어 및 미션 노드</description>
  <maintainer email="jazzskript@gmail.com">jazzskript</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
